--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
   <div id="content">
     <div id="frame-container">
-      <iframe src="http://www.freshlabels.cz/" alt="circa1990browser"></iframe>
+      <iframe src="http://www.freshlabels.cz/" ></iframe>
     </div>
     <p>AAA</p>
   </div>
