--- a/tasks.html
+++ b/tasks.html
@@ -26,18 +26,18 @@
         document.querySelector("iframe").src = scenario[step].url;
     }
 
-    window.onclick = function () {
-        console.log("aaaaa");
-        var xmlhttp = new XMLHttpRequest();
-        xmlhttp.onreadystatechange = function () {
-            if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-                console.log(xmlhttp.responseText);
-            }
-        };
-        xmlhttp.open("POST", "logger.php", true);
-        xmlhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-        xmlhttp.send("json=asdsadsads");
-    }
+//    window.onclick = function () {
+//        console.log("aaaaa");
+//        var xmlhttp = new XMLHttpRequest();
+//        xmlhttp.onreadystatechange = function () {
+//            if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+//                console.log(xmlhttp.responseText);
+//            }
+//        };
+//        xmlhttp.open("POST", "logger.php", true);
+//        xmlhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+//        xmlhttp.send("json=asdsadsads");
+//    }
 
     document.querySelector(".btn.btn-success").onclick=function(){
         console.log("STEP " + step);
