--- a/tasks.html
+++ b/tasks.html
@@ -30,29 +30,47 @@
     function main() {
         //Ignore X-Frame headers
         scenario = JSON.parse(data);
-        document.querySelector("iframe").src = scenario[parseInt(step)].url;
+        var username = getCookie("username");
+        if (scenario[parseInt(step)].type == "instruction") {
+            document.querySelector("iframe").src = scenario[parseInt(step)].url;
+            logTask("InstructionStart",username);
+        } else {
+            logTask("InstructionEnd",username);
+            document.querySelector("iframe").src = scenario[parseInt(step)].url + "?username=" + username;
+        }
         console.log(scenario);
     }
 
-    //    window.onclick = function () {
-    //        console.log("aaaaa");
-    //        var xmlhttp = new XMLHttpRequest();
-    //        xmlhttp.onreadystatechange = function () {
-    //            if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-    //                console.log(xmlhttp.responseText);
-    //            }
-    //        };
-    //        xmlhttp.open("POST", "logger.php", true);
-    //        xmlhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-    //        xmlhttp.send("json=asdsadsads");
-    //    }
+    function logTask(msg, username) {
+
+        var xmlhttp = new XMLHttpRequest();
+        var date = new Date();
+        var timeStamp = date.getHours() + ":" + date.getMinutes() + ":" + date.getSeconds() + "." + date.getMilliseconds();
+        var result = "{Type:\""+ msg + "\", TimeStamp:\""+ timeStamp + "\"}";
+        xmlhttp.onreadystatechange = function () {
+            if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+                console.log(xmlhttp.responseText);
+            }
+        };
+        xmlhttp.open("POST", "logger.php?username="+username, true);
+        xmlhttp.send(result);
+        console.log(result);
+    }
 
     document.querySelector(".btn.btn-success").onclick = function () {
-        console.log("STEP " + step);
+        //console.log("STEP " + step);
         var stepNum = parseInt(getCookie("step"));
         stepNum++;
         setCookie("step", stepNum.toString());
-        document.querySelector("iframe").src = scenario[stepNum].url;
+        var username = getCookie("username");
+        console.log("USERNAME " +username);
+        if (scenario[stepNum].type == "instruction") {
+            document.querySelector("iframe").src = scenario[stepNum].url;
+            logTask("InstructionStart",username);
+        } else {
+            logTask("InstructionEnd",username);
+            document.querySelector("iframe").src = scenario[stepNum].url + "?username=" + username;
+        }
     };
 
     function nextStep() {
