--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <div id="nick-name-content">
     <div class="form">
         <div class="form-group">
-            <label for="nick-name">Zadajte meno alebo prezyvku</label>
-            <input type="text" class="form-control" id="nick-name">
+            <label for="nick-name">Vaše meno</label>
+            <input type="text" class="form-control" id="nick-name" placeholder="Meno">
             <button type="button" class="btn btn-success" onclick="createCookie()">Pokracovat</button>
         </div>
     </div>
