--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -12,7 +13,7 @@
         <div class="form-group">
             <label for="nick-name">Vaše meno</label>
             <input type="text" class="form-control" id="nick-name" placeholder="Meno">
-            <button type="button" class="btn btn-success" onclick="createCookie()">Pokracovat</button>
+            <button type="button" class="btn btn-success" onclick="createCookie()">Pokračovat</button>
         </div>
     </div>
 </div>
