--- a/tasks.html
+++ b/tasks.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="jquery-1.12.0.min.js"></script>
     <meta charset="UTF-8">
     <script type="text/javascript" src="experiment_scenario.json"></script>
     <title>Experiment | Tasks</title>
@@ -91,6 +92,7 @@
         }
         return "";
     }
+
 </script>
 </body>
 </html>
