edit logging, add new tasks

--- a/tasks.html
+++ b/tasks.html
@@ -15,7 +15,7 @@
         <iframe src="" sandbox="allow-same-origin allow-scripts allow-popups allow-forms"></iframe>
     </div>
     <div id="action-buttons">
-        <button type="button" class="btn btn-success" on-click="nextStep()">Hotovo, Prejsť na další krok >></button>
+        <button type="button" class="btn btn-success" style="background-color: darkgrey" on-click="nextStep()">Hotovo, Prejsť na další krok >></button>
     </div>
 </div>
 <script>
