--- a/instruction.html
+++ b/instruction.html
@@ -15,7 +15,7 @@
         <h1></h1>
         <div class="info">
             <div id="instruction-text"><strong>Zadanie: </strong><span class="text"></span></div>
-            <div id="end-task"><strong>Ukoncenie ulohy: </strong><span class="text"></span></div>
+            <div id="end-task"><strong>Ukončenie úlohy: </strong><span class="text"></span></div>
         </div>
     </div>
 </div>
